--- a/index.html
+++ b/index.html
@@ -13,17 +13,34 @@
 </head>
 <body>
   <header>
-    <div>
-      <img src="assets/img/logo.png" alt="logo">
-    </div>
     <div class="principal">
+      <div class="logo-box">
+        <img src="assets/img/logo.png" alt="logo">
+      </div>
       <ul class="redes">
-        <li><span class="icon-twitter"></span></li>
-        <li><span class="icon-facebook2"></span></li>
-        <li><span class="icon-youtube"></span></li>
-        <li><span class="icon-instagram"></span></li>
+        <li class="item-i"><span class="icon-twitter"></span></li>
+        <li class="item-i"><span class="icon-facebook2"></span></li>
+        <li class="item-i"><span class="icon-youtube"></span></li>
+        <li class="item-i"><span class="icon-instagram"></span></li>
       </ul>
+      <div class="buscar">
+        buscar <span class="icon-search"></span>
+      </div>
     </div>
+    <nav>
+      <ul>
+        <li class="item-a"><a class="opcion" href="DireccionPagina"> Política </a></li>
+        <li class="item-a"><a class="opcion" href="DireccionPagina"> Economía </a></li>
+        <li class="item-a"><a class="opcion" href="DireccionPagina"> Sociedad </a></li>
+        <li class="item-a"><a class="opcion" href="DireccionPagina"> Mundo </a></li>
+        <li class="item-a"><a class="opcion" href="DireccionPagina"> Deportes </a></li>
+        <li class="item-a"><a class="opcion" href="DireccionPagina"> Espectáculos </a></li>
+        <li class="item-a"><a class="opcion" href="DireccionPagina"> Ed. Impresa </a></li>
+        <li class="item-a"><a class="opcion" href="DireccionPagina"> Investigación </a></li>
+        <li class="item-a"><a class="opcion" href="DireccionPagina"> Mas <span class="icon-chevron-down"></span></a></li>
+      </ul>
+      <a href="#">
+    </nav>
   </header>
 </body>
 </html>
