--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
   <meta name="Ariana Cabana" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="icon" type="image/ico" href="assets/img/icon.ico">
+  <link rel="icon" type="image/ico" href="assets/img/favicon.ico">
   <link href="https://fonts.googleapis.com/css?family=Courgette|Roboto" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="assets/css/main.css">
   <link rel="stylesheet" type="text/css" href="assets/fonts/style.css">
+  <link rel="stylesheet" type="text/css" href="assets/css/sprite.css">
   <title>La República</title>
 </head>
 <body>
@@ -39,8 +40,78 @@
         <li class="item-a"><a class="opcion" href="DireccionPagina"> Investigación </a></li>
         <li class="item-a"><a class="opcion" href="DireccionPagina"> Mas <span class="icon-chevron-down"></span></a></li>
       </ul>
-      <a href="#">
     </nav>
   </header>
+  <section class="noticias">
+    <div class="sprite-uno">
+      <article class="contenedor-noticia1">
+        <div class="sprite-odebrecht"></div>
+        <div class="texto-noticia1">
+          <h1>Los colaboradores eficaces han documentado su relato en caso  Lava Jato</h1>
+          <ul>
+            <li class="item-red-noticia1"><span class="icon-facebook2"></span></li>
+            <li class="item-red-noticia1"><span class="icon-twitter"></span></li>
+            <li class="item-red-noticia1"><span class="icon-share2"></span></li>
+          </ul>
+        </div>
+      </article>
+      <article class="contenedor-noticia2">
+        <div class="sprite-alejandra-aramayo"></div>
+        <div class="texto-noticia2">
+          <h1>Salen mas casos de extorcion contra congresista fujimorista Aramayo</h1>
+          <ul>
+            <li class="item-red-noticia2"><span class="icon-facebook2"></span></li>
+            <li class="item-red-noticia2"><span class="icon-twitter"></span></li>
+            <li class="item-red-noticia2"><span class="icon-share2"></span></li>
+          </ul>
+        </div>
+      </article>
+      <article class="contenedor-noticia3">
+        <div class="sprite-corea-del-norte-"></div>
+        <div class="texto-noticia3">
+          <h1>Corea del Norte: "La guerra termonuclear puede estallar en cualquier momento"</h1>
+          <ul>
+            <li class="item-red-noticia3"><span class="icon-facebook2"></span></li>
+            <li class="item-red-noticia3"><span class="icon-twitter"></span></li>
+            <li class="item-red-noticia3"><span class="icon-share2"></span></li>
+          </ul>
+        </div>
+      </article>
+    </div>
+    <div class="sprite-dos">
+      <article class="editorial">
+        <h2>Editorial</h2>
+        <div class="text-editorial">
+          <div class="sprite-senora"></div>
+          <p>Libertad y Extorsion</p>
+        </div>
+      </article>
+      <article class="contenedor-noticia4">
+        <div class="sprite-alcalde-de-chilca"></div>
+        <div class="texto-noticia4">
+          <h2>Evaluan prision preventiva para alcalde de Chilca y miembros de su banda 'Los Nucos'</h2>
+        </div>
+        <ul>
+          <li class="item-red-noticia1"><span class="icon-facebook2"></span></li>
+          <li class="item-red-noticia1"><span class="icon-twitter"></span></li>
+          <li class="item-red-noticia1"><span class="icon-share2"></span></li>
+        </ul>
+      </article>
+      <article class="contenedor-noticia4">
+        <div class="sprite-alcalde-de-chilca"></div>
+        <div class="texto-noticia4">
+          <h2>Evaluan prision preventiva para alcalde de Chilca y miembros de su banda 'Los Nucos'</h2>
+        </div>
+        <ul>
+          <li class="item-red-noticia1"><span class="icon-facebook2"></span></li>
+          <li class="item-red-noticia1"><span class="icon-twitter"></span></li>
+          <li class="item-red-noticia1"><span class="icon-share2"></span></li>
+        </ul>
+      </article>
+      <article class="extra">
+        <div class="sprite-anuncio"></div>
+      </article>
+    </div>
+  </section>
 </body>
 </html>
