--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       </div>
     </div>
     <nav>
-      <ul>
+      <ul id="opciones-box">
         <li class="item-a"><a class="opcion" href="DireccionPagina"> Política </a></li>
         <li class="item-a"><a class="opcion" href="DireccionPagina"> Economía </a></li>
         <li class="item-a"><a class="opcion" href="DireccionPagina"> Sociedad </a></li>
